# axum-project

./: .gitignore  Cargo.toml  README.md  artifacts.json  changelog.rss  index.html  oranda.json  secret.txt  toy-axum-installer.ps1.txt  toy-axum-installer.sh.txt
.github/workflows/: web.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.1.0/: index.html
changelog/v0.1.1/: index.html
changelog/v0.1.2/: index.html
csv/: sq8q-pnf5.csv  tmet-yeek.csv
ipc/: index.html  sq8q-pnf5.csv.arrow  tmet-yeek.csv.arrow
public/: artifacts.json  axum-project-installer.ps1.txt  changelog.rss  index.html  oranda-v0.6.1.css
public/artifacts/: index.html
public/changelog/: index.html
public/changelog/v0.1.0/: index.html
src/: main.rs  template.rs
src/template/: db.rs  med_data.rs  user.rs  user_fn.rs
wix/: main.wxs
